--- a/ClientServer.csproj
+++ b/ClientServer.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\Communication\ClientTCP.cs" />
     <Compile Include="source\Communication\ASyncServerTCP.cs" />
+    <Compile Include="source\Communication\ClientWrapper.cs" />
+    <Compile Include="source\Exceptions\ASynchronousReadingInProcessException.cs" />
+    <Compile Include="source\Exceptions\ClientHasClosedException.cs" />
+    <Compile Include="source\Exceptions\InvalidMessageException.cs" />
     <Compile Include="source\Messages\Message.cs" />
   </ItemGroup>
   <ItemGroup>
